sync(main): rinha-fraud@b49a8f6